--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content=""/>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
     <title>GoodQuestion</title>
+
 </head>
 
 <body>
@@ -13,8 +20,8 @@
 
     <header>
 
+    </header>
 
-    </header> 
 
     <main>
 
@@ -22,14 +29,10 @@
     </main>
 
 
-
-
     <footer>
 
 
     </footer>
-
-    </body>
     
 </body>
 </html>
